--- a/grails-app/conf/plugin.yml
+++ b/grails-app/conf/plugin.yml
@@ -2,7 +2,7 @@ openapi:
   components:
     security:
       oauth2:
-        baseUrl: 'https://auth.ala.org.au/cas/oidc/'
+        baseUrl: 'https://auth.ala.org.au/cas/oidc'
         authorizationUrl: "${openapi.components.security.oauth2.baseUrl}/authorize"
         refreshUrl: "${openapi.components.security.oauth2.baseUrl}/refresh"
         tokenUrl: "${openapi.components.security.oauth2.baseUrl}/token"
