--- a/grails-app/conf/plugin.yml
+++ b/grails-app/conf/plugin.yml
@@ -2,6 +2,11 @@ openapi:
   components:
     security:
       oauth2:
+        enabled: true
+        password-flow-enabled: false
+        implicit-flow-enabled: false
+        authcode-flow-enabled: true
+        client-credentials-flow-enabled: true
         baseUrl: 'https://auth.ala.org.au/cas/oidc'
         authorizationUrl: "${openapi.components.security.oauth2.baseUrl}/authorize"
         refreshUrl: "${openapi.components.security.oauth2.baseUrl}/refresh"
